<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/regbk"
    tools:context=".Register">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/logo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up"
            android:textColor="@color/secondary"
            android:textSize="40dp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:layout_marginTop="10dp"
            android:text="@string/lets_create_your_accont"
            android:textColor="@color/secondary"
            android:textSize="15dp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/secondary"
            android:layout_gravity="start"
            android:textStyle="bold"
            android:gravity="start"
            android:textSize="22dp"
            android:layout_marginTop="25dp"
            android:text="@string/user_name"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textSize="25dp"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:backgroundTint="@color/Primary"
            android:layout_marginTop="8dp"
            android:background="@drawable/border"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/secondary"
            android:layout_gravity="start"
            android:textStyle="bold"
            android:gravity="start"
            android:textSize="22dp"
            android:layout_marginTop="2dp"
            android:text="@string/email"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_singup"
            android:orientation="vertical"
            android:textSize="25dp"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:backgroundTint="@color/Primary"
            android:layout_marginTop="8dp"
            android:background="@drawable/border"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/secondary"
            android:layout_gravity="start"
            android:textStyle="bold"
            android:gravity="start"
            android:textSize="22dp"
            android:layout_marginTop="2dp"
            android:text="@string/password"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textSize="25dp"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:backgroundTint="@color/Primary"
            android:layout_marginTop="8dp"
            android:background="@drawable/border"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/secondary"
            android:layout_gravity="start"
            android:textStyle="bold"
            android:gravity="start"
            android:textSize="22dp"
            android:layout_marginTop="2dp"
            android:text="@string/confirm_password"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textSize="25dp"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:backgroundTint="@color/Primary"
            android:layout_marginTop="8dp"
            android:background="@drawable/border"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:src="@drawable/goglreg" />
        <Button
            android:layout_gravity="center_horizontal"
            android:layout_width="200dp"
            android:text="Register"
            android:textStyle="bold"
            android:id="@+id/regi"
            android:textSize="25dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/secondary"
            android:backgroundTint="@color/loginbtn"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Primary"
                android:layout_gravity="start"
                android:textStyle="bold"
                android:gravity="start"
                android:textSize="15dp"
                android:text="@string/already_you_have_an_account" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/loginsingup"
                android:layout_gravity="start"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:gravity="start"
                android:id="@+id/no_reg_in"
                android:textSize="15dp"
                android:text="@string/sing_in" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>